--- a/Styles.css
+++ b/Styles.css
@@ -1,3 +1,16 @@
 body {
     background-color: beige;
+    text-align: center;
+    font-family: "Helvetica", sans-serif;
 }
+
+.content section {
+    position: relative;
+    border: 15px black;
+    margin: 50px;
+}
+ul { 
+    position: relative;
+    list-style-position: inside
+}
+
