--- a/Styles.css
+++ b/Styles.css
@@ -17,4 +17,10 @@ ul {
     list-style-position: inside
 }
 
+button{
+    width: 378;
+    height: 378;
+    background: rgba(176, 183, 187, 0.603);
+  }
+
 
